<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/authenticate_title_background_color"
            android:padding="16dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/authenticate_title_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_assistant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/login_assistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/login_assistant"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_account"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_account"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_assistant" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:paddingTop="8dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/login_link"
            app:layout_constraintEnd_toEndOf="@+id/login_account"
            app:layout_constraintStart_toStartOf="@+id/login_account"
            app:layout_constraintTop_toBottomOf="@+id/login_account" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingHorizontal="40dp"
            android:paddingVertical="8dp"
            android:text="@string/login_link"
            android:textColor="@color/authenticate_title_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_action_arrow_next"
        app:backgroundTint="@color/btn_green_normal"
        app:fabSize="auto"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
